--- a/css/main.css
+++ b/css/main.css
@@ -168,7 +168,7 @@
     right: 15px;
 }
 
-/* (inicio) criei essa tag para a logo ficar piscando       */
+/* (inicio) criei essa tag para a logo ficar piscando      
 
 .img-logo, .logo-footer, .btn-social {
     display: inline-block;
@@ -178,14 +178,6 @@
     animation: blink 1s infinite;
     transition: opacity 0.5s ease-in-out;
     animation: blink 7s infinite;
-  }
-
-  .btn-social {
-
-    animation: blink 1s infinite;
-    transition: opacity 0.5s ease-in-out;
-    animation: blink 4s infinite;
-
   }
   
   @keyframes blink {
@@ -217,12 +209,13 @@
     position: absolute;
     right: 14px;
     bottom: -75px;
+    background-color: #faeccd;
 }
 
 .card-case-name {
     position: absolute;
-    font-size: 12px;
-    color: var(--color-primary);
+    font-size: 13px;
+    color: var(--color-text);
     right: 20px;
     bottom: 10px;
 }
